simplified lambda macro

--- a/Calchylus - Lambda calculus in Hy.ipynb
+++ b/Calchylus - Lambda calculus in Hy.ipynb
@@ -23,7 +23,7 @@
     {
      "data": {
       "text/plain": [
-       "<function _hy_anon_fn_5 at 0x000001F47D0550D0>"
+       "<function _hy_anon_fn_2 at 0x000001A557C84620>"
       ]
      },
      "execution_count": 1,
@@ -32,40 +32,19 @@
     }
    ],
    "source": [
-    "; for lambda macro these functions needs to be available at compile time\n",
+    "; for lambda macro find function needs to be available at compile time\n",
     "(eval-and-compile\n",
-    " \n",
+    "  ; for modifiable separator\n",
+    "  ; at the moment hy doesnt support dot on expression. dot is mixed with internal HyCons functionality\n",
     "  (setv comma '·)\n",
-    " \n",
-    "  (defn drop-until [x l] \n",
-    "    (do\n",
-    "      (try \n",
-    "        (setv y (.index l x))\n",
-    "        (except [ValueError] (setv y -1)))\n",
-    "      (cut l (inc y))))\n",
     "\n",
-    "  (defn take-until [x l] \n",
-    "    (do\n",
-    "      (try \n",
-    "        (setv y (.index l x))\n",
-    "        (except [ValueError] (setv y (len l))))\n",
-    "      (cut l 0 y)))\n",
-    "\n",
-    "  (defn hcdot [expr] \n",
-    "    (list \n",
-    "      (map (fn [x] (if (= x hy.HyCons) comma x)) expr)))\n",
-    " \n",
-    "  (defn args [expr]\n",
-    "    (if (= (first expr) comma) [] (take-until comma expr))))\n",
+    "  (defn find [x l]\n",
+    "    (try (.index l x) (except [ValueError] -1))))\n",
     "\n",
     "(defmacro 𝜆 [&rest expr]\n",
-    "  `(fn [~@(args expr)] ~(first (drop-until comma expr))))\n",
-    "\n",
-    "; shorthand syntax: (#λ(x y · (+ x y)) 1 2)\n",
-    "(defsharp λ [expr] (print expr)\n",
-    "  `(fn [~@(args expr)] ~(first (drop-until comma expr))))\n",
-    "\n",
-    "; Ÿ Application"
+    "  (do\n",
+    "    (setv y (find comma expr))\n",
+    "    `(fn ~(cut expr 0 (if (< y 1) 0 y)) ~@(cut expr (inc y)))))"
    ]
   },
   {
@@ -461,7 +440,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001F47D12FEA0>"
+       "<function <lambda> at 0x000001A557D622F0>"
       ]
      },
      "execution_count": 14,
@@ -489,7 +468,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'y' is not defined\n"
+      "name 'y' is not defined\n"
      ]
     }
    ],
@@ -497,7 +476,7 @@
     "(try \n",
     "  ((𝜆 x · (+ x y)) 1)\n",
     "  (except (e NameError)\n",
-    "    (print \"'y' is not defined\")))"
+    "    (print e)))"
    ]
   },
   {
@@ -624,7 +603,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001F47D12FEA0>"
+       "<function <lambda> at 0x000001A557D62378>"
       ]
      },
      "execution_count": 20,
@@ -645,7 +624,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001F47D12FE18>"
+       "<function <lambda> at 0x000001A557D62400>"
       ]
      },
      "execution_count": 21,
@@ -666,7 +645,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001F47D146048>"
+       "<function <lambda> at 0x000001A557D62268>"
       ]
      },
      "execution_count": 22,
