--- a/Calchylus - Lambda calculus in Hy.ipynb
+++ b/Calchylus - Lambda calculus in Hy.ipynb
@@ -23,7 +23,7 @@
     {
      "data": {
       "text/plain": [
-       "<function _hy_anon_fn_2 at 0x000001A557C84620>"
+       "<function _hy_anon_fn_2 at 0x000001F370904730>"
       ]
      },
      "execution_count": 1,
@@ -32,19 +32,18 @@
     }
    ],
    "source": [
-    "; for lambda macro find function needs to be available at compile time\n",
+    "; find function needs to be available at compile time for the lambda expression macro\n",
     "(eval-and-compile\n",
-    "  ; for modifiable separator\n",
-    "  ; at the moment hy doesnt support dot on expression. dot is mixed with internal HyCons functionality\n",
+    "  ; set comma constant for modifiable separator\n",
+    "  ; at the moment hy doesnt support dot on expression because dot is mixed with internal HyCons functionality\n",
     "  (setv comma '·)\n",
-    "\n",
+    "  ; find index of the element x from the list l. if element is not found, return -1\n",
     "  (defn find [x l]\n",
     "    (try (.index l x) (except [ValueError] -1))))\n",
-    "\n",
+    "; lambda expression macro\n",
     "(defmacro 𝜆 [&rest expr]\n",
-    "  (do\n",
-    "    (setv y (find comma expr))\n",
-    "    `(fn ~(cut expr 0 (if (< y 1) 0 y)) ~@(cut expr (inc y)))))"
+    "  (setv index (find comma expr))\n",
+    "  `(fn ~(cut expr 0 (if (< index 1) 0 index)) ~@(cut expr (inc index))))"
    ]
   },
   {
@@ -440,7 +439,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001A557D622F0>"
+       "<function <lambda> at 0x000001F3709E3378>"
       ]
      },
      "execution_count": 14,
@@ -603,7 +602,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001A557D62378>"
+       "<function <lambda> at 0x000001F3709E3488>"
       ]
      },
      "execution_count": 20,
@@ -624,7 +623,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001A557D62400>"
+       "<function <lambda> at 0x000001F3709E32F0>"
       ]
      },
      "execution_count": 21,
@@ -645,7 +644,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001A557D62268>"
+       "<function <lambda> at 0x000001F3709E3268>"
       ]
      },
      "execution_count": 22,
