--- a/Calchylus - Lambda calculus in Hy.ipynb
+++ b/Calchylus - Lambda calculus in Hy.ipynb
@@ -5,19 +5,24 @@
    "metadata": {},
    "source": [
     "# Calchylus - Lambda calculus in Hy\n",
+    "\n",
     "<br/>\n",
-    "<img src=\"lambda.png\" height=150 width=150 />\n",
+    "<br/>\n",
+    "$$\\Huge ϒ = 𝜆x.(𝜆y.x \\space (y \\space y)) \\space (𝜆y.x \\space (y \\space y))$$\n",
+    "<br/>\n",
     "<br/>\n",
     "\n",
-    "Calchylus is a combination of [Hy](http://docs.hylang.org) macro and Lambda term dictionary. It was written to help to write and evaluate Lambda expressions.\n",
+    "`Calchylus` is a combination of [Hy](http://docs.hylang.org) macro and Lambda term dictionary. It was written to help to write and evaluate Lambda expressions.\n",
     "\n",
     "<blockquote>[Lambda calculus](https://en.wikipedia.org/wiki/Lambda_calculus) is a formal system in mathematical logic for expressing computation based on function abstraction and application using variable binding and substitution. -<i> wikipedia.org</i></blockquote>\n",
     "\n",
     "The short `𝜆` macro presented below, makes it possible to define and evaluate Lambda expressions the most conventional way. There is really not much to implement because Hy is already a LISP language. LISP, on the other hand, can be defined as *an untyped Lambda calculus extended with constants*. So actually we just need to introduce `𝜆` macro,  simplify the usual LISP notation, and act only with functions.\n",
     "\n",
+    "At the current development stage, `Calchylus` does not provide alpha and beta reduction stages of the terms, just direct evaluation.\n",
+    "\n",
     "### Repository\n",
     "\n",
-    "[Calchylus](http://nbviewer.jupyter.org/github/markomanninen/calchylus/blob/master/Calchylus%20-%20Lambda%20calculus%20in%20Hy.ipynb) Jupyter notebook and GitHub [repository](https://github.com/markomanninen/calchylus) was initialized by [Marko Manninen](https://github.com/markomanninen), 08/2017.\n",
+    "`Calchylus` Jupyter notebook [document](http://nbviewer.jupyter.org/github/markomanninen/calchylus/blob/master/Calchylus%20-%20Lambda%20calculus%20in%20Hy.ipynb) and GitHub [repository](https://github.com/markomanninen/calchylus) was initialized by [Marko Manninen](https://github.com/markomanninen), 08/2017.\n",
     "\n",
     "##  Lambda (`𝜆`) macro"
    ]
@@ -30,7 +35,7 @@
     {
      "data": {
       "text/plain": [
-       "<function _hy_anon_fn_2 at 0x000001991350E598>"
+       "<function _hy_anon_fn_2 at 0x000002637D63E598>"
       ]
      },
      "execution_count": 1,
@@ -535,7 +540,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x00000199133F7048>"
+       "<function <lambda> at 0x000002637D526048>"
       ]
      },
      "execution_count": 16,
@@ -578,6 +583,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Numerals\n",
+    "\n",
+    "#### Addition\n",
+    "\n",
     "### Logical operations"
    ]
   },
@@ -895,16 +904,18 @@
    "source": [
     "; loop until given limit and sum up all values -> (summa 10)\n",
     "; x = function, y = steps, z = result\n",
-    "((𝜆 x y · (x x y 0))\n",
-    "  (𝜆 x y z · (if (> y 0) (x x (- y 1) (+ y z)) z))\n",
-    "  10)"
+    "((𝜆 x y · (x x y 0)) (𝜆 x y z · (if (> y 0) (x x (- y 1) (+ y z)) z)) 10)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Product"
+    "#### Factorial\n",
+    "\n",
+    "Implementing the traditional Y combinator.\n",
+    "\n",
+    "$$\\Large ϒ = (𝜆 \\space x · ((𝜆 \\space y · (x \\space (y \\space y))) \\space (𝜆 \\space y · (x \\space (y \\space y)))))$$"
    ]
   },
   {
@@ -927,6 +938,15 @@
     "; loop until given limit and sum up all values -> (product 7)\n",
     "; x = function, y = steps, z = result\n",
     "((𝜆 x y · (x x y 1)) (𝜆 x y z · (if (> y 0) (x x (- y 1) (* y z)) z)) 7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ";((𝜆 x · ((𝜆 y · (x (y y))) (𝜆 y · (x (y y))))) (𝜆 f · (𝜆 n · (zero? n) 1 (* n (f (inc n))))))"
    ]
   },
   {
