--- a/Calchylus - Lambda calculus in Hy.ipynb
+++ b/Calchylus - Lambda calculus in Hy.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Calchylus - Lambda calculus in Hy\n",
+    "# Calchylus - Lambda calculus with Hy\n",
     "\n",
     "<br/>\n",
     "<br/>\n",
@@ -35,7 +35,7 @@
     {
      "data": {
       "text/plain": [
-       "<function _hy_anon_fn_2 at 0x000002637D63E598>"
+       "<function _hy_anon_fn_2 at 0x000001F41A7E56A8>"
       ]
      },
      "execution_count": 1,
@@ -540,7 +540,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000002637D526048>"
+       "<function <lambda> at 0x000001F41A8C3268>"
       ]
      },
      "execution_count": 16,
@@ -583,6 +583,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Composition\n",
+    "\n",
+    "http://www.ics.uci.edu/~lopes/teaching/inf212W12/readings/lambda-calculus-handout.pdf\n",
+    "\n",
     "### Numerals\n",
     "\n",
     "#### Addition\n",
@@ -942,11 +946,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    ";((𝜆 x · ((𝜆 y · (x (y y))) (𝜆 y · (x (y y))))) (𝜆 f · (𝜆 n · (zero? n) 1 (* n (f (inc n))))))"
+    ";λt.(λx.t (x x)) (λx.t (x x))\n",
+    ";(((𝜆 x · ((𝜆 y · (x (y y))) (𝜆 y · (x (y y))))) (𝜆 f · (𝜆 n · (if (= n 1) 1 (* n (f (dec n))))))) 7)\n",
+    ";(((fn [f] ((fn [x] (x x)) (fn [x] (f (fn [y] ((x x) y)))))) (fn [f] (fn [n] (if (< n 3) n (* n (f (dec n))))))) 5)\n",
+    "(((𝜆 f · ((𝜆 x · (x x)) (𝜆 x · (f (𝜆 y · ((x x) y)))))) (𝜆 f · (𝜆 n · (if (< n 3) n (* n (f (dec n))))))) 5)"
    ]
   },
   {
