cleaning up a bit

--- a/Lambda+Calchylus+tests.ipynb
+++ b/Lambda+Calchylus+tests.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Lambda Calchylus test document\n",
     "\n",
-    "Lambda calculus evaluator written with Hy."
+    "Lambda calculus evaluator written with Hy.\n",
+    "\n",
+    "__DRAFT!__ 4.9.2017"
    ]
   },
   {
@@ -19,7 +21,7 @@
      "output_type": "stream",
      "text": [
       "Hy version:  0.13.0\n",
-      "Python 3.6.2 |Continuum Analytics, Inc.| (default, Jul 20 2017, 12:30:02) [MSC v.1900 64 bit (AMD64)]\n"
+      "Python 3.6.2 | packaged by conda-forge | (default, Jul 23 2017, 22:58:45) [MSC v.1900 64 bit (AMD64)]\n"
      ]
     }
    ],
@@ -37,7 +39,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x0000013E94612268>"
+       "<function _hy_anon_fn_18 at 0x0000025322D26BF8>"
       ]
      },
      "execution_count": 2,
@@ -52,15 +54,15 @@
     "        lambdachr 'L\n",
     "        ; lambda expression argument and body separator\n",
     "        separator ',\n",
-    "        forms [\"CONST\" \"IDENT\" \"TRUE\" \"FALSE\" \"REPLACE\"\n",
+    "        ; TODO: these could be constructed by some lambda-term-generator macro\n",
+    "        forms [\"CONST\" \"IDENT\" \"TRUE\" \"FALSE\" \"REPLACE\" \"OMIT\"\n",
     "               \"PAIR\" \"HEAD\" \"TAIL\" \"FIRST\" \"SECOND\" \"NIL\" \"NIL?\" \"is_NIL\"\n",
     "               \"ZERO\" \"ZERO?\" \"is_ZERO\" \"NUM\" \n",
     "               \"ONE\" \"TWO\" \"THREE\" \"FOUR\" \"FIVE\" \"SIX\" \"SEVEN\" \"EIGHT\" \"NINE\" \"TEN\"\n",
     "               \"COND\" \"AND\" \"OR\" \"NOT\" \"XOR\"\n",
     "               \"ADD\" \"PRED\" \"SUCC\" \"EXP\" \"SUM\" \"PROD\" \"SUB\"\n",
-    "               \"EQ?\" \"is_EQ\" \"LEQ?\" \"is_LEQ\" \"SELF\" \"YCOMB\"])\n",
-    "  ; is given expression an expression?\n",
-    "  (defn expr? [x] (instance? hy.HyExpression x))\n",
+    "               \"EQ?\" \"is_EQ\" \"LEQ?\" \"is_LEQ\" \"SELF\" \"YCOMB\"\n",
+    "               \"SUMMATION\" \"FACTORIAL\" \"FIBONACCI\"])\n",
     "  ; pretty print utility\n",
     "  (defn pprint [expr]\n",
     "    (if-not (coll? expr) (str expr)\n",
@@ -72,17 +74,17 @@
     "         (except [e [ValueError AttributeError]]\n",
     "           -1)))\n",
     "  ; extend and return list instead of .extend list in place\n",
+    "  ; provide a as a copy (.copy a) in cases where strange \n",
+    "  ; recursive error behaviour is occurring\n",
     "  (defn extend [a &rest b]\n",
-    "    ; using original list (a) directly causes recursion error in some strange cases\n",
-    "    ; thus using copy of it (ca) to work with\n",
     "    (for [c b] (.extend a c)) a)\n",
-    "  ; church number body generator helper: (N 3 m n) ; -> (m (m (m n)))\n",
-    "  (defn N [n x y]\n",
-    "    (if (zero? n) y\n",
-    "        (% \"(%s %s%s\" (, x  (N (dec n) x y) \")\"))))\n",
+    "  ; church number body generator helper (N 3 m n) ; -> (m (m (m n)))\n",
+    "  ;(defn N [n x y]\n",
+    "  ;  (if (zero? n) y\n",
+    "  ;      (% \"(%s %s%s\" (, x  (N (dec n) x y) \")\"))))\n",
     "  ; is expr(ession) a suitable macro form?\n",
     "  (defn macro-form? [expr] (and (symbol? expr) (in expr forms)))\n",
-    "  ;\n",
+    "  ; is expr(ession) or the firs sub expression a suitable macro form\n",
     "  (defn form? [expr]\n",
     "    (or (macro-form? expr)\n",
     "        (and (coll? expr) (macro-form? (first expr)))))\n",
@@ -97,7 +99,7 @@
     "  ; substitute lambda sub expr(ession). it requires special handler\n",
     "  ; because of variable shadowing and not-coll body\n",
     "  (defn substitute* [a b expr] \n",
-    "    (setv p (parts expr)\n",
+    "    (setv p (extract-parts expr)\n",
     "          args (get p \"args\")\n",
     "          body (get p \"body\")\n",
     "          vals (get p \"vals\")\n",
@@ -122,7 +124,10 @@
     "        ; return substitute (b), if match is found\n",
     "        (if (= a expr) b expr)))\n",
     "  ; shift arguments inside functions in application expressions\n",
-    "  ; ((L x , x) 1) -> (L x , x 1)\n",
+    "  ; ((L x , x) a b) -> (L x , x a b) -> (a b)\n",
+    "  ; ((TRUE) TRUE FALSE) -> (TRUE TRUE FALSE) -> TRUE\n",
+    "  ; this is required to convert and evaluate substituted function forms\n",
+    "  ; (L x y z , ((x) y z) TRUE a b) -> ((TRUE) a b) -> (TRUE a b) -> a\n",
     "  (defn shift-arguments [expr]\n",
     "    (if-not (coll? expr) expr \n",
     "      (do\n",
@@ -132,49 +137,52 @@
     "            (setv expr (extend ((type f) (.copy f)) (tuple (rest expr)))))\n",
     "        ;(print 'shift-arguments-2 (pprint expr))\n",
     "        ((type expr) (genexpr (shift-arguments e) [e expr])))))\n",
-    "  ; get lambda expression parts\n",
+    "  ; extract lambda expression parts\n",
     "  ; body: (x x), args: (x), values (y), and params: ([x y])\n",
-    "  (defn parts [expr]\n",
-    "    (setv idx (index expr separator)\n",
-    "          ; expression might start with L: (L x , x ...)\n",
-    "          ; or without L: (x , x ...)\n",
-    "          ldx (if (L? expr) 1 0))\n",
+    "  (defn extract-parts [expr] ;(print expr)\n",
+    "    (setv idx (index expr separator))\n",
     "    ; if separator index is less than expected\n",
     "    ; lambda expression is possibly malformed, just return the expression\n",
-    "    (if (< idx ldx) {\"body\" (if (coll? expr) (first expr) expr) \"args\" [] \"vals\" [] \"params\" []}\n",
+    "    (if (< idx 1) {\"body\" (if (coll? expr) (first expr) expr) \"args\" [] \"vals\" [] \"params\" []}\n",
     "        (do\n",
     "          (setv body (cut expr (inc idx))\n",
-    "                args (list (cut expr ldx idx))\n",
-    "                vals (list (rest body)))\n",
+    "                args (tuple (cut expr 1 idx))\n",
+    "                vals (tuple (rest body)))\n",
     "          ; return body, args, vals, and key-value pairs based on args-vals\n",
-    "          {\"body\" (first body) \"args\" args \"vals\" vals \"params\" (list (zip args vals))})))\n",
-    "  ; handle macro forms\n",
-    "  (defn expand-forms [body]\n",
+    "          {\"body\" (first body) \"args\" args \"vals\" vals \"params\" (zip args vals)})))\n",
+    "  ; handle macro forms extra\n",
+    "  (defn expand-form* [body]\n",
     "    (if-not (coll? body) body\n",
     "        (if (macro-form? (first body))\n",
     "            (eval body)\n",
-    "            ((type body) (genexpr (expand-forms e) [e body])))))\n",
+    "            ((type body) (genexpr (expand-form* e) [e body])))))\n",
     "  ; helper function to expand form that has custom lambda macros / forms\n",
-    "  (defn expand-form [expr]\n",
+    "  ; used after everything else for the lambda form evaluation is done\n",
+    "  (defn expand-forms [expr]\n",
     "    (if-not (none? expr)\n",
     "      (if (or (symbol? expr) (coll? expr) (iterable? expr))\n",
-    "          (pprint (expand-forms (read-str expr)))\n",
+    "          (pprint (expand-form* (read-str expr)))\n",
     "          expr)))\n",
-    "  ;\n",
+    "  ; are evaluated lambda forms same and there are no free values\n",
+    "  ; inside the form. because, if there are, we can still reduce the form\n",
     "  (defn B? [body bodyx]\n",
-    "    (setv p (parts body))\n",
+    "    (setv p (extract-parts body))\n",
     "    (and (empty? (get p \"vals\")) (= body bodyx)))\n",
-    " \n",
+    "  ; main form beta / eta reduction steps\n",
     "  (defn beta-reduction [expr]\n",
     "    ;(print)\n",
     "    ;(print 'beta-reduction: (pprint expr))\n",
+    "    ; TODO: should we try to shift argument before everything else is done?\n",
     "    ;(if (and (coll? expr)) (setv expr (shift-arguments expr)))\n",
+    "    ; if the form (expr) is not lambda for i.e. starting with L\n",
+    "    ; we still want to seek if there are sub lambda expressions\n",
+    "    ; (x (x (L x , x y))) should return (x (x y))\n",
     "    (if-not (L? expr) \n",
     "      (if (coll? expr)\n",
     "          ((type expr) (genexpr (beta-reduction x) [x expr]))\n",
     "          expr)\n",
     "      (do \n",
-    "    (setv p (parts expr)\n",
+    "    (setv p (extract-parts expr)\n",
     "          body (get p \"body\")\n",
     "          bodyx body\n",
     "          ; rest of the free arguments that are not in params\n",
@@ -204,15 +212,23 @@
     "            (if (L? body)\n",
     "                (beta-reduction body)\n",
     "                ((type body) (genexpr (beta-reduction x) [x (if (empty? free) body (extend [body] free))]))))))))\n",
-    "  ; reformulate expression, pass parameters and expand possible macro form\n",
+    "  ; reformulate expression, because by using L macro, L is naturally left out from the expression\n",
+    "  ; beta-reduction functions on the other hand relys on the L in the beginning of the expression!\n",
+    "  ; then pass parameters and possibly expand macro form later\n",
     "  (defn evaluate-lambda-expression [expr]\n",
     "    (setv expr (beta-reduction (hy.HyExpression (extend [lambdachr] expr))))\n",
     "    (if (or (coll? expr) (symbol? expr))\n",
+    "        ; symbols and expression should be pretty \"printed\"\n",
     "        (pprint expr)\n",
+    "        ; numbers for example get passed as they are\n",
+    "        ; this is not exactly included on lambda calculus but just a way\n",
+    "        ; to keep data types existing for hy and later usage\n",
     "        expr)))\n",
     "\n",
-    "; shorthand to expand \n",
-    "(defsharp 𝜆 [expr] `(expand-form (L , ~expr)))\n",
+    "; shorthand to evaluate lambda form and expand the result\n",
+    "; it still has some cases, where expansion is not working as expected,\n",
+    "; for example: #𝜆(SUM (SUM ONE ONE) ZERO) ; -> (x (x (ZERO x y)))\n",
+    "(defsharp 𝜆 [expr] `(expand-forms (L , ~expr)))\n",
     "\n",
     "; lambda expression main macro\n",
     "(defmacro L [&rest expr]\n",
@@ -224,17 +240,17 @@
     "        (print (str e) \"for lambda expression:\" (pprint expr))))))\n",
     "\n",
     "; church number generator: (NUM 3) ; -> (L x y , (x (x (x y))))\n",
-    ";(defmacro NUM [n &optional [x \"x\"] [y \"y\"] &rest args]\n",
-    ";  `(L ~x ~y , ~(read_str (N n x y)) ~@args))\n",
-    "(defmacro NUM [n &rest args]\n",
-    "  `(L x y , ~(read_str (N n 'x 'y)) ~@args))\n",
+    "; launch application: (NUM 3 a b) ; -> (a (a (a b)))\n",
     ";(defmacro NUM [n &rest args]\n",
-    ";  (if (< n 0) (macro-error n (% \"For NUM n needs to be zero or more, was: %s\" n))\n",
-    ";      (= n 0) `(L x y , y ~@args)\n",
-    ";      (> n 0) (do (setv expr `(x y))\n",
-    ";                  (for [i (range (dec n))]\n",
-    ";                    (setv expr `(x ~expr)))\n",
-    ";                  `(L x y , ~expr ~@args))))"
+    ";  `(L x y , ~(read_str (N n 'x 'y)) ~@args))\n",
+    "; Tuukka Turto (@tuturto), 2017\n",
+    "(defmacro NUM [n &rest args]\n",
+    "  (if (< n 0) (macro-error n (% \"For NUM n needs to be zero or more, was: %s\" n))\n",
+    "      (= n 0) `(L x y , y ~@args)\n",
+    "      (> n 0) (do (setv expr `(x y))\n",
+    "                  (for [i (range (dec n))]\n",
+    "                    (setv expr `(x ~expr)))\n",
+    "                  `(L x y , ~expr ~@args))))"
    ]
   },
   {
@@ -254,7 +270,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x0000013E945AA8C8>"
+       "<function <lambda> at 0x0000025322DC4488>"
       ]
      },
      "execution_count": 3,
@@ -340,14 +356,23 @@
     "(defmacro EQ?   [&rest args] `(L m n , (AND (LEQ? m n) (LEQ? n m)) ~@args))\n",
     "; combinators / applications\n",
     "(defmacro SELF  [&rest args] `(L f x , (f f x) ~@args))\n",
+    "; TODO!\n",
     "(defmacro YCOMB [&rest args] `(L f , (L x , (f (f x)) (L x , (f (f x)))) ~@args))\n",
     "; some math functions\n",
     "; ∑\n",
     "(defmacro SUMMATION [&rest args] `(L x , (SELF (L f n , (COND (ZERO? n) ZERO (SUM n (f f (PRED n))))) x) ~@args))\n",
-    "; ∏\n",
+    "; ∏ TODO: number greater than THREE will mess up the evaluation\n",
+    "; Also if number (n) is give first at: (PROD n (f f (PRED n))) it will mess up the thing\n",
     "(defmacro FACTORIAL [&rest args] `(L x , (SELF (L f n , (COND (ZERO? n) ONE (PROD (f f (PRED n)) n))) x) ~@args))\n",
-    "; F\n",
+    "; F TODO: implement\n",
     "(defmacro FIBONACCI [])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sandbox test area"
    ]
   },
   {
@@ -367,6 +392,7 @@
     }
    ],
    "source": [
+    "; infix serial notation!\n",
     "(ONE ADD TWO ADD THREE)"
    ]
   },
@@ -378,7 +404,7 @@
     {
      "data": {
       "text/plain": [
-       "'(x (x (x (x (x (x (ZERO x (ZERO x y))))))))'"
+       "'(x (x y))'"
       ]
      },
      "execution_count": 5,
@@ -387,7 +413,7 @@
     }
    ],
    "source": [
-    "#𝜆(SUM (SUM (SUM TWO FOUR) ZERO) ZERO)"
+    "#𝜆(x (x (L x , x y)))"
    ]
   },
   {
@@ -447,6 +473,7 @@
     }
    ],
    "source": [
+    "; https://stackoverflow.com/questions/36511989/lambda-calculus-reduction-evaluating-expr\n",
     "(L f x , (f (f x)) (L y , (y ^ 2)) 5)"
    ]
   },
