added sharp and greek lambda tests

--- a/Tests.ipynb
+++ b/Tests.ipynb
@@ -4,30 +4,31 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hy version:  0.13.0\n",
+      "Python 3.6.2 | packaged by conda-forge | (default, Jul 23 2017, 22:58:45) [MSC v.1900 64 bit (AMD64)]\n"
+     ]
+    }
+   ],
    "source": [
-    "(require (calchylus.lambdas [*]))"
+    "(import hy sys)\n",
+    "(print \"Hy version: \" hy.__version__)\n",
+    "(print \"Python\" sys.version)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<function <lambda> at 0x000001B1F6B78158>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "(with-macros 𝜆 ·)\n",
-    "(assert (= (𝜆 · TRUE) \"(𝜆 a b · a)\"))"
+    "(require (calchylus.lambdas [*]))"
    ]
   },
   {
@@ -38,7 +39,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001B1F6B78510>"
+       "<function <lambda> at 0x0000026902E1C6A8>"
       ]
      },
      "execution_count": 3,
@@ -66,22 +67,22 @@
     "(assert (= (L x y , x 1 0) 1))\n",
     "; select second, with arguments\n",
     "(assert (= (L x y , y 1 0) 0))\n",
-    "; function without arguments\n",
+    "; multiary function without arguments\n",
     "(assert (= (L x y z , (x y z)) \"(L x y z , (x y z))\"))\n",
     "; nested functions and arguments\n",
     "(assert (= (L x , (L y , (L z , (z x y) l) k) j) \"(l j k)\"))\n",
     "; nested functions, flatten arguments\n",
     "(assert (= (L x , (L y , (L z , (z x y))) j k l) \"(l j k)\"))\n",
-    "; flatten functions and arguments\n",
+    "; multiary function with arguments\n",
     "(assert (= (L x y z , (z x y) j k l) \"(l j k)\"))\n",
     "; application without arguments\n",
     "(assert (= (L , ((L x y z , (x y z)))) \"(L x y z , (x y z))\"))\n",
     "; application with arguments\n",
     "(assert (= (L , ((L x y z , (x y z)) a b c)) \"(a b c)\"))\n",
-    "; free argument\n",
+    "; any free arguments should be returned on the final result\n",
     "(assert (= (L x , x y z) \"(y z)\"))\n",
-    "; nested\n",
-    "(assert (= (L , ((L x y z , (x y z) x y z) a b c) 1 2 3) \"((x y z) a b c 1 2 3)\"))"
+    "; nested free arguments\n",
+    "(assert (= (L , ((L x y z , (x y z) l m n) a b c) 1 2 3) \"((l m n) a b c 1 2 3)\"))"
    ]
   },
   {
@@ -92,7 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001B1F6B9F9D8>"
+       "<function <lambda> at 0x0000026902E1C730>"
       ]
      },
      "execution_count": 4,
@@ -101,13 +102,19 @@
     }
    ],
    "source": [
-    "(with-alpha-conversion L , )\n",
-    "; variable renaming should give right result\n",
-    "; instead of first substituting x with y, and then both y's with z, resulting (2 2)\n",
-    "; this test should give (y z) because y is bound to x and x only. latter y should not replace it\n",
-    "(assert (= (L x y , (x y) y z) \"(y z)\"))\n",
-    "; same should apply to deeper values too\n",
-    "(assert (= (L x y , (x y) (y (y z)) z) \"((y (y z)) z)\"))"
+    "(with-alpha-conversion-nor-macros 𝜆 ·)\n",
+    "; using application shapr macro, starting with lambda expression\n",
+    "(assert (= #Ÿ(𝜆 x · x) \"(𝜆 x · x)\"))\n",
+    "; using application shapr macro, lambda expressionin the middle\n",
+    "(assert (= #Ÿ(x (x (𝜆 x · x y))) \"(x (x y))\"))\n",
+    "; return whole abstraction\n",
+    "(assert (= (𝜆 x · (𝜆 y · (𝜆 z · (x y z)))) \"(𝜆 x · (𝜆 y · (𝜆 z · (x y z))))\"))\n",
+    "; evaluate first abstraction, return rest abstraction levels\n",
+    "(assert (= (𝜆 x · (𝜆 y · (𝜆 z · (x y z))) 1) \"(𝜆 y · (𝜆 z · (1 y z)))\"))\n",
+    "; evaluate first and second abstraction, return rest abstraction levels\n",
+    "(assert (= (𝜆 x · (𝜆 y · (𝜆 z · (x y z))) 1 2) \"(𝜆 z · (1 2 z))\"))\n",
+    "; evaluate first, second, and the third abstraction, return fully evaluated result\n",
+    "(assert (= (𝜆 x · (𝜆 y · (𝜆 z · (x y z))) 1 2 3) \"(1 2 3)\"))"
    ]
   },
   {
@@ -118,10 +125,43 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001B1F6EEEA60>"
+       "<function <lambda> at 0x0000026902E1C840>"
       ]
      },
      "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(with-alpha-conversion-nor-macros L ,)\n",
+    "; without variable renaming next result is given\n",
+    "; first substitute x with y, and then both y's with z, resulting (z z)\n",
+    "(assert (= (L x y , (x y) y z) \"(z z)\"))\n",
+    "; same should apply to deeper values too\n",
+    "(assert (= (L x y , (x y) (y (y z)) z) \"((z (z z)) z)\"))\n",
+    "\n",
+    "(with-alpha-conversion L , )\n",
+    "; using variable renaming / alpha conversion to prevent name collision should give right result\n",
+    "; instead of first substituting x with y, and then both y's with z\n",
+    "; this test should give (y z) because y is bound to x only. latter y should not replace it\n",
+    "(assert (= (L x y , (x y) y z) \"(y z)\"))\n",
+    "; same should apply to deeper values too. note similarity with LET and LET* macro handler!\n",
+    "(assert (= (L x y , (x y) (y (y z)) z) \"((y (y z)) z)\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function <lambda> at 0x0000026902F95378>"
+      ]
+     },
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -210,8 +250,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "; church numeral general generator, without arguments\n",
@@ -230,8 +272,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "; letters\n",
@@ -251,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -288,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -321,7 +365,17 @@
     "(assert (= (, (EXP TWO TWO) (EXP TEN ZERO) (EXP ZERO ZERO))\n",
     "           (, \"(x (x (x (x y))))\" \"(x y)\" \"(x y)\")))\n",
     "(assert (= (, (PROD ZERO ONE a b) (PROD ONE ONE a b) (PROD TWO TWO a b))\n",
-    "           (, 'b \"(a b)\" \"(a (a (a (a b))))\")))\n",
+    "           (, 'b \"(a b)\" \"(a (a (a (a b))))\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "; self application\n",
     "(assert (= (SELF (L x , x) 1) 1))\n",
     "; self application, fixed point\n",
@@ -335,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -357,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +439,7 @@
        "'(x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x y))))))))))))))))))))))))))))))))))))'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +459,7 @@
        "'(x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x y)))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +479,7 @@
        "'(x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x y))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,13 +491,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## The [MIT](http://choosealicense.com/licenses/mit/) License\n",
+    "\n",
+    "Copyright (c) 2017 Marko Manninen"
+   ]
   }
  ],
  "metadata": {
