--- a/Tests2.7.ipynb
+++ b/Tests2.7.ipynb
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "Hy version:  0.13.0\n",
-      "Python 3.6.2 | packaged by conda-forge | (default, Jul 23 2017, 22:58:45) [MSC v.1900 64 bit (AMD64)]\n"
+      "Python 2.7.13 |Anaconda 4.4.0 (64-bit)| (default, May 11 2017, 13:17:26) [MSC v.1500 64 bit (AMD64)]\n"
      ]
     }
    ],
@@ -23,9 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "(require (calchylus27.lambdas [*]))"
@@ -39,7 +37,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001932D176598>"
+       "<function <lambda> at 0x0000000006077B38>"
       ]
      },
      "execution_count": 3,
@@ -93,7 +91,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001932D1766A8>"
+       "<function <lambda> at 0x0000000006077A58>"
       ]
      },
      "execution_count": 4,
@@ -102,19 +100,19 @@
     }
    ],
    "source": [
-    "(with-alpha-conversion-nor-macros 𝜆 ·)\n",
+    "(with-alpha-conversion-nor-macros L ,)\n",
     "; using application shapr macro, starting with lambda expression\n",
-    "(assert (= #Ÿ(𝜆 x · x) \"(𝜆 x · x)\"))\n",
+    "(assert (= #Y(L x , x) \"(L x , x)\"))\n",
     "; using application shapr macro, lambda expressionin the middle\n",
-    "(assert (= #Ÿ(x (x (𝜆 x · x y))) \"(x (x y))\"))\n",
+    "(assert (= #Y(x (x (L x , x y))) \"(x (x y))\"))\n",
     "; return whole abstraction\n",
-    "(assert (= (𝜆 x · (𝜆 y · (𝜆 z · (x y z)))) \"(𝜆 x · (𝜆 y · (𝜆 z · (x y z))))\"))\n",
+    "(assert (= (L x , (L y , (L z , (x y z)))) \"(L x , (L y , (L z , (x y z))))\"))\n",
     "; evaluate first abstraction, return rest abstraction levels\n",
-    "(assert (= (𝜆 x · (𝜆 y · (𝜆 z · (x y z))) 1) \"(𝜆 y · (𝜆 z · (1 y z)))\"))\n",
+    "(assert (= (L x , (L y , (L z , (x y z))) 1) \"(L y , (L z , (1 y z)))\"))\n",
     "; evaluate first and second abstraction, return rest abstraction levels\n",
-    "(assert (= (𝜆 x · (𝜆 y · (𝜆 z · (x y z))) 1 2) \"(𝜆 z · (1 2 z))\"))\n",
+    "(assert (= (L x , (L y , (L z , (x y z))) 1 2) \"(L z , (1 2 z))\"))\n",
     "; evaluate first, second, and the third abstraction, return fully evaluated result\n",
-    "(assert (= (𝜆 x · (𝜆 y · (𝜆 z · (x y z))) 1 2 3) \"(1 2 3)\"))"
+    "(assert (= (L x , (L y , (L z , (x y z))) 1 2 3) \"(1 2 3)\"))"
    ]
   },
   {
@@ -125,7 +123,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001932D176510>"
+       "<function <lambda> at 0x00000000060772E8>"
       ]
      },
      "execution_count": 5,
@@ -158,7 +156,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001932D38C378>"
+       "<function <lambda> at 0x0000000005DBF5F8>"
       ]
      },
      "execution_count": 6,
@@ -390,13 +388,24 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function <lambda> at 0x0000000005DBF588>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "; requires alpha conversion and macros, or will cause recursion error!\n",
+    "(with-alpha-conversion-and-macros L , )\n",
     "; summation sequence, with plain number\n",
-    "(assert (= (SUMMATION (L x y , (x (x (x y))))) \"(x (x (x (x (x (x y))))))\"))\n",
+    ";(assert (= (SUMMATION (L x y , (x (x (x y))))) \"(x (x (x (x (x (x y))))))\"))\n",
     "; summation sequence, with number macro form\n",
     "(assert (= (SUMMATION THREE) \"(x (x (x (x (x (x y))))))\"))\n",
     "; product sequence, with plain number\n",
@@ -436,7 +445,7 @@
     {
      "data": {
       "text/plain": [
-       "'(x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x y))))))))))))))))))))))))))))))))))))'"
+       "u'(x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x y))))))))))))))))))))))))))))))))))))'"
       ]
      },
      "execution_count": 15,
@@ -456,7 +465,7 @@
     {
      "data": {
       "text/plain": [
-       "'(x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x y)))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))'"
+       "u'(x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x y)))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))'"
       ]
      },
      "execution_count": 16,
@@ -476,7 +485,7 @@
     {
      "data": {
       "text/plain": [
-       "'(x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x y))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))'"
+       "u'(x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x y))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))'"
       ]
      },
      "execution_count": 17,
@@ -485,9 +494,90 @@
     }
    ],
    "source": [
-    "; requires alpha conversion and macros, or will cause recursion error!\n",
-    "(with-alpha-conversion-and-macros L , )\n",
     "(FACTORIAL (NUM 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recursion error occured for lambda expression:  (x , (YCOMB (L f n , (COND (is_ZERO n) ONE (SUM (f (PRED n)) (f (PRED (PRED n)))))) x) THREE)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function <lambda> at 0x0000000005CA5EB8>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "; Y combinator fibonacci macro\n",
+    "(defmacro FIBONACCI2 [&rest args]\n",
+    "  `(~lambdachr x ~separator\n",
+    "    (YCOMB (~lambdachr f n ~separator (COND (ZERO? n) ONE (SUM (f (PRED n)) (f (PRED (PRED n)))))) x) ~@args))\n",
+    "\n",
+    "(FIBONACCI2 THREE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'(L m n x y , (m (n x) y))'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(PROD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recursion error occured for lambda expression:  (f , (L x , (f (x x)) (L x , (f (x x)))) (L f n , (L p a b , (p a b) (L n , (n (L a , (L a b , b)) (L a b , a)) n)) (L x y , (x y)) (PROD (f (PRED n)) n)) (L x y , (x (x (x y)))))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function <lambda> at 0x0000000005F4A4A8>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(with-alpha-conversion-and-macros L , )\n",
+    "(L f , (L x , (f (x x)) (L x , (f (x x)))) \n",
+    "       (L f n , (L p a b , (p a b) (L n , (n (L a , (L a b , b)) (L a b , a)) n)) (L x y , (x y))\n",
+    "          (PROD (f (PRED n)) n))\n",
+    "       (L x y , (x (x (x y)))))"
    ]
   },
   {
