--- a/README
+++ b/README
@@ -2,30 +2,28 @@
 Calchylus - Lambda calculus with Hy
 =====================================
 
-`Calchylus` is a [Hy](http://docs.hylang.org) module that is used to evaluate,
-and furthermore, to understand the basics of Lambda calculus (also written as
-λ-calculus).
+``Calchylus`` is a `Hy <http://docs.hylang.org>`__ module that is used to
+evaluate, and furthermore, to understand the basics of Lambda calculus
+(also written as λ-calculus).
 
-<blockquote>
-  <a href="https://en.wikipedia.org/wiki/Lambda_calculus">Lambda calculus</a>
-  is a formal system in mathematical logic for expressing computation based on
-  function abstraction and application using variable binding and substitution.
-  -<i> wikipedia.org</i>
-</blockquote>
+> `Lambda calculus <https://en.wikipedia.org/wiki/Lambda_calculus>`__ is a
+  formal system in mathematical logic for expressing computation that is
+  based on function abstraction and application using variable binding and
+  substitution. -*wikipedia.org*
 
 Quick start
 -----------
 
-.. code:: unix
+.. code-block:: bash
 
 	$ pip install hy calchylus
 	$ hy
 
-.. code:: lisp
+.. code-block:: hylang
 
-	> (require [calchylus.lambdas [*]])
-	> (with-alpha-conversion-and-macros L ,)
-	> (L x y , (x (x (x (x (x y))))) a b)
-	(a (a (a (a (a b)))))
-	> (FIBONACCI FIVE)
-	(x (x (x (x (x (x (x (x (x (x (x (x (x y)))))))))))))
+	(require [calchylus.lambdas [*]])
+	(with-alpha-conversion-and-macros L ,)
+	(L x y , (x (x (x (x (x y))))) a b)
+	; (a (a (a (a (a b)))))
+	(FIBONACCI FIVE)
+	; (x (x (x (x (x (x (x (x (x (x (x (x (x y)))))))))))))
