--- a/README
+++ b/README
@@ -6,10 +6,11 @@ Calchylus - Lambda calculus with Hy
 evaluate, and furthermore, to understand the basics of Lambda calculus
 (also written as λ-calculus).
 
-> `Lambda calculus <https://en.wikipedia.org/wiki/Lambda_calculus>`__ is a
-  formal system in mathematical logic for expressing computation that is
-  based on function abstraction and application using variable binding and
-  substitution. -*wikipedia.org*
+	`Lambda calculus <https://en.wikipedia.org/wiki/Lambda_calculus>`__ is a
+	formal system in mathematical logic for expressing computation that is
+	based on function abstraction and application using variable binding and
+	substitution. -*wikipedia.org*
+
 
 Quick start
 -----------
