new tests for geq?, ge?, and le?

--- a/Tests.ipynb
+++ b/Tests.ipynb
@@ -39,7 +39,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x0000026902E1C6A8>"
+       "<function <lambda> at 0x000001FCEC5639D8>"
       ]
      },
      "execution_count": 3,
@@ -93,7 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x0000026902E1C730>"
+       "<function <lambda> at 0x000001FCEC563A60>"
       ]
      },
      "execution_count": 4,
@@ -125,7 +125,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x0000026902E1C840>"
+       "<function <lambda> at 0x000001FCEC563B70>"
       ]
      },
      "execution_count": 5,
@@ -158,7 +158,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x0000026902F95378>"
+       "<function <lambda> at 0x000001FCEC7089D8>"
       ]
      },
      "execution_count": 6,
@@ -170,7 +170,9 @@
     "(with-macros L , )\n",
     "; special macros for main lambda terms / forms\n",
     "; constant\n",
-    "(assert (= (CONST x) 'x))\n",
+    "(assert (= (CONST x) None))\n",
+    "(assert (= (CONST x 1) \"(L x , 1)\"))\n",
+    "(assert (= (CONST x 1 2) 1))\n",
     "; identity, without arguments\n",
     "(assert (= (IDENT) \"(L a , a)\"))\n",
     "; identity, with arguments\n",
@@ -187,9 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "; lists\n",
@@ -251,9 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "; church numeral general generator, without arguments\n",
@@ -296,9 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "; and tests\n",
@@ -322,29 +318,34 @@
     "(assert (= (COND (AND (NOT (XOR FALSE FALSE)) (OR TRUE FALSE)) TRUE FALSE) (TRUE)))\n",
     "; eval read str\n",
     "(assert (= (eval (read-str \"(TRUE)\")) \"(L a b , a)\"))\n",
-    "; less or equal\n",
+    "; lesser or equal\n",
     "(assert (= (, (LEQ? ONE TWO) (LEQ? TWO ONE)  (LEQ? ONE ONE) \n",
     "           (, (TRUE) (FALSE) (TRUE)))))\n",
-    "; equal\n",
+    "; greater or equal\n",
+    "(assert (= (, (GEQ? ONE TWO) (GEQ? TWO ONE)  (GEQ? ONE ONE) \n",
+    "           (, (FALSE) (TRUE) (TRUE)))))\n",
+    "; equals\n",
     "(assert (= (, (EQ? ONE TWO) (EQ? TWO ONE)  (EQ? ONE ONE) \n",
-    "           (, (FALSE) (FALSE) (TRUE)))))"
+    "           (, (FALSE) (FALSE) (TRUE)))))\n",
+    "; lesser\n",
+    "(assert (= (, (LE? ONE TWO) (LE? TWO ONE)  (LE? ONE ONE) \n",
+    "           (, (TRUE) (FALSE) (FALSE)))))\n",
+    "; greater\n",
+    "(assert (= (, (GE? ONE TWO) (GE? TWO ONE)  (GE? ONE ONE) \n",
+    "           (, (FALSE) (TRUE) (FALSE)))))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "; math operations\n",
     "; next, inc, successive\n",
     "(assert (= (SUCC ONE) \"(x (x y))\"))\n",
-    "; add is same as succ\n",
-    "(assert (= (ADD ONE) \"(x (x y))\"))\n",
     "; infix notation\n",
-    "(assert (= (ONE ADD ONE ADD ONE) \"(x (x (x y)))\"))\n",
+    "(assert (= (ONE SUCC ONE SUCC ONE) \"(x (x (x y)))\"))\n",
     "; previous, dec, predecessive\n",
     "(assert (= (PRED THREE) \"(x (x y))\"))\n",
     "; previous, dec, predecessor, with arguments\n",
