--- a/Tests.ipynb
+++ b/Tests.ipynb
@@ -39,7 +39,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001FCEC5639D8>"
+       "<function <lambda> at 0x0000017C8E6DF8C8>"
       ]
      },
      "execution_count": 3,
@@ -93,7 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001FCEC563A60>"
+       "<function <lambda> at 0x0000017C8E6DF9D8>"
       ]
      },
      "execution_count": 4,
@@ -125,7 +125,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001FCEC563B70>"
+       "<function <lambda> at 0x0000017C8E6DF840>"
       ]
      },
      "execution_count": 5,
@@ -158,7 +158,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x000001FCEC7089D8>"
+       "<function <lambda> at 0x0000017C8EA619D8>"
       ]
      },
      "execution_count": 6,
@@ -405,9 +405,9 @@
     "; product sequence, with number macro form\n",
     "(assert (= (FACTORIAL THREE) \"(x (x (x (x (x (x y))))))\"))\n",
     "; fibonacci, with plain number\n",
-    "(assert (= (FIBONACCI (L x y , (x (x (x (x (x y))))))) \"(x (x (x (x (x (x (x (x (x (x (x (x (x y)))))))))))))\"))\n",
+    "(assert (= (FIBONACCI (L x y , (x (x (x (x (x y))))))) \"(x (x (x (x (x (x (x (x y))))))))\"))\n",
     "; fibonacci, with number macro form\n",
-    "(assert (= (FIBONACCI FIVE) \"(x (x (x (x (x (x (x (x (x (x (x (x (x y)))))))))))))\"))"
+    "(assert (= (FIBONACCI FIVE) \"(x (x (x (x (x (x (x (x y))))))))\"))"
    ]
   },
   {
@@ -457,7 +457,7 @@
     {
      "data": {
       "text/plain": [
-       "'(x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x y)))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))'"
+       "'(x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x y)))))))))))))))))))))))))))))))))))))))))))))))))))))))'"
       ]
      },
      "execution_count": 16,
